gitops/app/example-voting-app/deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: postgres:15-alpine
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        resources:
          requests:
            cpu: "150m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
      volumes:
      - name: db-data
        emptyDir: {}
