gitops/app/example-voting-app/deployment-result.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: dockersamples/examplevotingapp_result
        name: result
        ports:
        - containerPort: 80
          name: result
        resources:
          requests:
            cpu: "150m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
