gitops/app/example-voting-app/deployment-vote.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote
        name: vote
        ports:
        - containerPort: 80
          name: vote
        resources:
          requests:
            cpu: "150m"
            memory: "128Mi"
          limits:
            cpu: "150m"
            memory: "512Mi"
