gitops/app/example-voting-app/deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: dockersamples/examplevotingapp_worker
        name: worker
        resources:
          requests:
            cpu: "150m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
